--- a/roles/generalostasks/tasks/linux.yml
+++ b/roles/generalostasks/tasks/linux.yml
@@ -40,18 +40,19 @@
         enabled: yes
       when: (region == "ca-central-1")
 
-    - name: Copy nslcd.j2 from EC2 to Ansible Controller
-      fetch:
-        src: /tmp/buildfiles/ca/ldap/nslcd.j2
-        dest: /tmp/
-        flat: yes
-      when: ( region == "ca-central-1" ) and (osselection == "rhel7")
+    # Not doing RHEL 7 anymore
+    # - name: Copy nslcd.j2 from EC2 to Ansible Controller
+    #   fetch:
+    #     src: /tmp/buildfiles/ca/ldap/nslcd.j2
+    #     dest: /tmp/
+    #     flat: yes
+    #   when: ( region == "ca-central-1" ) and (osselection == "rhel7")
 
-    - name: LDAP - Template of CA nslcd Config file
-      template:
-        src: /tmp/nslcd.j2
-        dest: /etc/nslcd.conf
-      when: ( region == "ca-central-1" ) and (osselection == "rhel7")
+    # - name: LDAP - Template of CA nslcd Config file
+    #   template:
+    #     src: /tmp/nslcd.j2
+    #     dest: /etc/nslcd.conf
+    #   when: ( region == "ca-central-1" ) and (osselection == "rhel7")
 
     # sssd replaces nslcd for RHEL 8
     # pam_krb5 is deprecated in RHEL 8.  It is replaced with sssd, which includes the PAM module, pam_sss.  This module can perform the tasks pam_krb5 previously used.
@@ -65,56 +66,100 @@
     #     mode: 0600 
     #   when: ( region == "ca-central-1" ) and (osselection == "rhel8")
 
-    - name: Copy sssd.j2 from EC2 to Ansible Controller
+    # sssd authentication replaced with Delinea authentication
+    # - name: Copy sssd.j2 from EC2 to Ansible Controller
+    #   fetch:
+    #     src: /tmp/buildfiles/ca/ldap/sssd.j2
+    #     dest: /tmp/
+    #     flat: yes
+    #   when: ( region == "ca-central-1" ) and (osselection == "rhel8")
+
+    # - name: LDAP - Template of CA sssd Config file
+    #   template:
+    #     src: /tmp/sssd.j2
+    #     dest: /etc/sssd/sssd.conf
+    #   when: ( region == "ca-central-1" ) and (osselection == "rhel8")
+
+    # Pre-Delinea implementation
+    # - name: LDAP - Copy CA krb5.conf
+    #   copy:
+    #     src: /tmp/buildfiles/ca/ldap/{{ item }}
+    #     dest: /etc/
+    #     remote_src: yes
+    #     backup: yes
+    #   with_items:
+    #     - krb5.conf
+    #   when: (region == "ca-central-1")
+
+    - name: Copy USA krb5.j2 from EC2 to Ansible Controller is not Ubuntu
       fetch:
-        src: /tmp/buildfiles/ca/ldap/sssd.j2
+        src: /tmp/buildfiles/us/ldap/krb5.j2
         dest: /tmp/
         flat: yes
-      when: ( region == "ca-central-1" ) and (osselection == "rhel8")
+      when: (region != "ca-central-1") and ((osselection == "centos9") or (osselection == "rhel8") or (osselection == "rhel9"))
 
-    - name: LDAP - Template of CA sssd Config file
+    - name: Copy USA krb5.j2 from EC2 to Ansible Controller is Ubuntu
+      fetch:
+        src: /home/buildfiles/us/ldap/krb5.j2
+        dest: /tmp/
+        flat: yes
+      when: (region != "ca-central-1") and (osselection == "ubuntu24")
+
+    - name: LDAP - Template of USA krb5 Config file
       template:
-        src: /tmp/sssd.j2
-        dest: /etc/sssd/sssd.conf
-      when: ( region == "ca-central-1" ) and (osselection == "rhel8")
+        src: /tmp/krb5.j2
+        dest: /etc/krb5.conf
+      when: (region != "ca-central-1") and ((osselection == "centos9") or (osselection == "rhel8") or (osselection == "rhel9") or (osselection == "ubuntu24"))
 
-    - name: LDAP - Copy CA krb5.conf
-      copy:
-        src: /tmp/buildfiles/ca/ldap/{{ item }}
-        dest: /etc/
-        remote_src: yes
-        backup: yes
-      with_items:
-        - krb5.conf
-      when: (region == "ca-central-1")
+    - name: Copy Canada krb5.j2 from EC2 to Ansible Controller is not Ubuntu
+      fetch:
+        src: /tmp/buildfiles/ca/ldap/krb5.j2
+        dest: /tmp/
+        flat: yes
+      when: (region == "ca-central-1") and ((osselection == "centos9") or (osselection == "rhel8") or (osselection == "rhel9"))
+
+    - name: Copy Canada krb5.j2 from EC2 to Ansible Controller is Ubuntu
+      fetch:
+        src: /tmp/buildfiles/ca/ldap/krb5.j2
+        dest: /tmp/
+        flat: yes
+      when: (region == "ca-central-1") and (osselection == "ubuntu24")
+
+    - name: LDAP - Template of CA krb5 Config file
+      template:
+        src: /tmp/krb5.j2
+        dest: /etc/krb5.conf
+      when: (region == "ca-central-1") and ((osselection == "centos9") or (osselection == "rhel8") or (osselection == "rhel9") or (osselection == "ubuntu24"))
 
     # It is not recommended to manually modify the PAM files and /etc/nsswitch.conf file in RHEL8.
 
-    - name: LDAP - Copy CA nsswitch.conf
-      copy:
-        src: /tmp/buildfiles/ca/ldap/{{ item }}
-        dest: /etc/
-        remote_src: yes
-        backup: yes
-      with_items:
-        - nsswitch.conf
-      when: (region == "ca-central-1") and (osselection == "rhel7")
+    # Not doing RHEL 7 anymore
+    # - name: LDAP - Copy CA nsswitch.conf
+    #   copy:
+    #     src: /tmp/buildfiles/ca/ldap/{{ item }}
+    #     dest: /etc/
+    #     remote_src: yes
+    #     backup: yes
+    #   with_items:
+    #     - nsswitch.conf
+    #   when: (region == "ca-central-1") and (osselection == "rhel7")
 
-    - name: LDAP - Start Services (Again for CA)
-      service:
-        name: "{{ item }}"
-        state: restarted
-        enabled: yes
-      with_items:
-        - nscd
-        - nslcd
-      when: (region == "ca-central-1") and (osselection == "rhel7")
+    # - name: LDAP - Start Services (Again for CA)
+    #   service:
+    #     name: "{{ item }}"
+    #     state: restarted
+    #     enabled: yes
+    #   with_items:
+    #     - nscd
+    #     - nslcd
+    #   when: (region == "ca-central-1") and (osselection == "rhel7")
 
-    - name: Restart sssd service
-      service:
-        name: sssd
-        state: restarted
-      when: ( region == "ca-central-1" ) and (osselection == "rhel8")
+    # sssd authentication replaced with Delinea authentication
+    # - name: Restart sssd service
+    #   service:
+    #     name: sssd
+    #     state: restarted
+    #   when: ( region == "ca-central-1" ) and (osselection == "rhel8")
 
     - name: Add CA Linux Admin Group ACA Admin If Needed
       lineinfile:
