--- a/roles/appgroup/tasks/smarts.yml
+++ b/roles/appgroup/tasks/smarts.yml
@@ -4,12 +4,19 @@
     name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
     state: present
 
-- name: Update ca-certificates
+- name: Update Redhat OS Family ca-certificates
   yum:
     name:
       - ca-certificates
     state: latest # noqa 403
   when: (ansible_facts['os_family'] == 'RedHat')
+
+- name: Update Debian OS Family ca-certificates
+  ansible.builtin.apt:
+    name:
+      - ca-certificates
+    state: latest # noqa 403
+  when: (ansible_facts['os_family'] == 'Debian')
 
 - name: Install SMARTS Software Package Prerequisites
   yum:
