--- a/roles/networkconfig/tasks/main.yml
+++ b/roles/networkconfig/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - import_tasks: linux.yml
-  when: (ansible_facts['os_family'] == "RedHat")
+  when: (ansible_facts['os_family'] == "RedHat") or (ansible_facts['os_family'] == "Debian")
 
 - import_tasks: windows.yml
   when: (ansible_facts['os_family'] == "Windows")
